# AM_progress

./: README.md  gazebo_commands  tb3_house_map.yaml  turtle_movement.py
acoustic_feature_extraction/: CMakeLists.txt  package.xml  setup.py
acoustic_feature_extraction/launch/: acoustic_monitoring.launch  acoustic_monitoring_experiment.launch
acoustic_feature_extraction/scripts/: acoustic_feature_extraction.py  failed_filter_node.py  filter_node.py  filter_node2.py  main_filters.py  main_filters2.py
acoustic_monitoring_msgs/: CMakeLists.txt  package.xml
acoustic_monitoring_msgs/msg/: MsgAcousticFeature.msg
acoustic_signal_analysis/.ipynb_checkpoints/: signal_analysis_meltpool_acoustic-checkpoint.ipynb?token=GHSAT0AAAAAABYX24ORNUT7YHSLK632UKUYYZVWGMA
acoustic_utils/ros-audio-convert-master/: CMakeLists.txt  command.txt
acoustic_utils/ros-audio-convert-master/src/: bag2wav.cpp
audio_capture_convert/: CMakeLists.txt  package.xml
audio_capture_convert/Launch/: capture.launch
audio_capture_convert/scripts/: converter_node.py
audio_common/audio_capture/launch/: capture.launch  capture_to_file.launch  capture_wave.launch
audio_common/audio_play/launch/: play.launch
laam_laser_control/: CMakeLists.txt  README.md  package.xml
laam_laser_control/config/: control_parameters.yaml
laam_laser_control/include/laam_laser_control/: PidConfig.h  pid.h
laam_laser_control/include/pid/: pid.h
laam_laser_control/launch/: control _mic.launch  control.launch  laser_sim.launch  vrft_adaptive_autocontrol.launch
laam_laser_control/resources/: control.ui
laam_laser_control/scripts/: nd_control.py  nd_supervisor.py  nd_velocity_kuka.py  qt_control.py
laam_laser_control/src/: CPP_pid.cpp  autotune.cpp  extra.cpp  main.cpp
laam_laser_control/src/control/: control.py  pid.cpp  pid.h  plant_sim.cpp
testing/: README.md
