<?xml version="1.0"?>
<package>
  <name>acoustic_feature_extraction</name>
  <version>0.4.0</version>
  <description>The acoustic_feature_extraction package.</description>
  <maintainer email="chen1470@e.ntu.edu.sg">Chen Lequn</maintainer>
  <license>NA</license>

  <buildtool_depend>catkin</buildtool_depend>
  

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>audio_capture</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  
  <!-- <build_export_depend>audio_capture</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>audio_capture</exec_depend>
  <exec_depend>rospy</exec_depend> -->

</package>
