<?xml version="1.0"?>
<package>
  <name>acoustic_monitoring_msgs</name>
  <version>0.4.0</version>
  <description>The acoustic_processing_msgs package.</description>
  <maintainer email="chen1470@e.ntu.edu.sg">Chen Lequn</maintainer>
  <license>NA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend> -->
  <build_depend>message_generation</build_depend>
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!-- <build_export_depend>message_generation</build_export_depend> -->

  <!-- <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend> -->
  <run_depend>message_runtime</run_depend>

</package>
